@@ -4,6 +4,8 @@ dygraphs 0.6 (unreleased)
 * Add support for plotting data with a numeric x-axis (previously only time series
   data was accepted).
 
+* Add new logscale option for numeric x-axis or y-axis.
+
 
 dygraphs 0.5
 --------------------------------------------------------------------------------
